implement eternals reload
